# Agent-Orchestra

./: .gitignore  .ignores  AGENTS.md  README.md  README.zh-CN.md  pyproject.toml  resource
docs/resource/knowledge/: README.md  knowledge-solidification-standard.md
docs/superpowers/specs/: 2026-04-12-agent-orchestra-resident-daemon-backend-and-session-attach-design.md
src/agent_orchestra/: __init__.py
src/agent_orchestra/bus/: __init__.py  base.py  in_memory.py  redis_bus.py
src/agent_orchestra/cli/: app.py  daemon_app.py  main.py
tests/: test_agent_contracts.py  test_backends.py  test_bootstrap_round.py  test_cli.py  test_contracts.py  test_daemon_contracts.py  test_daemon_server.py  test_delivery.py  test_delivery_contracts.py  test_delivery_store.py  test_directed_mailbox_protocol.py  test_dynamic_superleader_planner.py  test_evaluator.py  test_execution.py  test_execution_guard.py  test_group_runtime_resident_shell.py  test_hierarchical_reviews.py  test_leader_loop.py  test_leader_output_protocol.py  test_mailbox_bridge.py  test_openai_runner.py  test_planning.py  test_planning_reviews.py  test_postgres_store.py  test_protocol_bridge.py  test_runtime.py  test_self_hosting.py  test_self_hosting_exports.py  test_self_hosting_round.py  test_session_continuity_contracts.py  test_session_continuity_service.py  test_session_continuity_store.py  test_session_domain.py  test_session_host.py  test_session_memory_contracts.py  test_session_memory_service.py  test_session_memory_store.py  test_slot_supervisor.py  test_superleader_runtime.py  test_task_reviews.py  (+8 more)
(+147 files in other folders)
