[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-orchestra"
version = "0.1.0"
description = "A usable alpha runtime for multi-team agent orchestration in Python."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
postgres = ["psycopg[binary]>=3.1.0"]
redis = ["redis>=5.0.0"]

[project.scripts]
agent-orchestra = "agent_orchestra.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
